--- a/src/app/components/timesheet/timesheet.component.html
+++ b/src/app/components/timesheet/timesheet.component.html
@@ -20,7 +20,22 @@
                     <th>Total Hours</th>
                     <th></th>
                 </thead>
-                
+                <tbody>
+                    <tr *ngFor="let employee of employees; let i = index">
+                        <td>{{employee.name}}</td>
+                        <td *ngFor="let day of weekdays">
+                            <input type="number" [id]="day" [(ngModel)]="employee[day]" class="hours-input">
+                        </td>
+                        <td class="total-cell">{{getTotalHours(employee)}}</td>
+                        <td>
+                            <button mat-icon-button (click)="deleteEmployee(i)">
+                                <mat-icon>
+                                    delete
+                                </mat-icon>
+                            </button>
+                        </td>
+                    </tr>
+                </tbody>
             </table>
         </mat-card>
     </div>
