--- a/src/app/components/timesheet/timesheet.component.scss
+++ b/src/app/components/timesheet/timesheet.component.scss
@@ -9,6 +9,20 @@ mat-form-field {
     width: calc(100% - 40px);
 }
 
+
 .hours {
+    min-height: 200px;
     margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.hours-input {
+    max-width: 75px;
+    margin-left: 15px;
+    text-align: center;
+}
+.total-cell {
+    text-align: center;
 }
