--- a/src/app/components/timesheet/timesheet.component.html
+++ b/src/app/components/timesheet/timesheet.component.html
@@ -10,13 +10,13 @@
             <button mat-mini-fab color="primary" (click)="addEmployee()" [disabled]="employeeNameFC.invalid">
               <mat-icon>add</mat-icon>
           </button>
-      
+
         </mat-card>
         <mat-card class="hours">
             <table>
                 <thead>
                     <th>Name</th>
-                    <th *ngFor="let day of weekdays">{{day}}</th>
+                    <th *ngFor="let day of weekdays">{{day | titlecase}}</th>
                     <th>Total Hours</th>
                     <th></th>
                 </thead>
