--- a/src/app/components/analytics-table/analytics-table.component.html
+++ b/src/app/components/analytics-table/analytics-table.component.html
@@ -2,7 +2,7 @@
   <table>
       <thead>
           <th>Name</th>
-          <th *ngFor="let day of weekdays">{{day}} | titlecase</th>
+          <th *ngFor="let day of weekdays"> {{day | titlecase}}  </th>
           <th>Total Hours</th>
           <th>Pay Rate</th>
           <th>Total Pay</th>
